# qemu_linux

./: .gitignore  .gitmodules  README.md  build_arm64.sh  build_vexpress.sh  debug_virt.sh  env.sh  generate_rootfs.sh  kdb_virt.sh  rootfs.tar.xz  run_arm.sh  run_virt.sh
doc/: arm64_dt.md  devicetree_cn.md  rwsem_cn.md  softirq_cn.md  v4l2.md
modules/cdev/: Makefile  cdev1.c  hello.c
modules/this_module/: Makefile  my_module.c
modules/timers/: Makefile  README.md  hrtimer1.c  hrtimer2.c  jiffies.c  timer1.c  timer2.c
patches/: kdb_arm64.patch  kdb_config.diff
tools/: CMakeLists.txt  README.md  build_arm64.sh
tools/catch2/: CMakeLists.txt  main.cpp
tools/mkefidisk/: mkefidisk.sh  mkefidisk_emmc.sh  wiki
tools/netlink/: netlink.py
tools/periphery_tool/include/: Command.h  Common.h
tools/periphery_tool/src/: SerialDevice.cpp  SpiDevice.cpp
tools/python/: spi_test.py
tools/src/: Common.cpp  main.cpp
